# dm-annotations

./: .gitignore  README.md  connectives-patterns.json  devenv.nix  devenv.yaml  modality-patterns.json  pyproject.toml  test.sh
notebooks/: analysis.py  dm-excel-conversion.qmd
resources/: NOTES.md  connectives-regexes.json  test.jsonl
src/dm_annotations/: __init__.py  analysis.py  annotation_loader.py  cli.py  corpus.py  matcher.py  network.py  notebook.py  patterns.py  schemas.py
src/dm_annotations/analysis/: analysis.py  network.py
src/dm_annotations/annotation/: annotation_convert.py  annotation_io.py  annotation_loader.py
src/dm_annotations/io/: corpus.py  export.py  loader.py  text_loader.py
src/dm_annotations/pipeline/: __init__.py  cache.py  extensions.py  matcher.py  patterns.py  pipeline.py  pipeline_components.py
tests/: conftest.py  test_analysis.py  test_annotations.py  test_corpus.py  test_extraction.py  test_llm.py  test_matcher.py  test_network.py  test_patterns.py  test_patters.py  test_pipeline.py  test_section_metadata.py  test_text_loader.py
